Change font defaults
Lato fonts do not have accent chars, so use Merriweather Sans insted.

Change monospaced font to Fira Code

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Fonts
 $text-font-family: Merriweather, Georgia, serif;
-$heading-font-family: Lato, Helvetica, sans-serif;
-$code-font-family: 'Source Code Pro', 'Lucida Console', monospace;
+$heading-font-family: 'Merriweather Sans', Helvetica, sans-serif;
+$code-font-family: 'Fira Code', Inconsolata, monospace;
 
 // Colors
 $bg-color: #FAFAFA !default;
