initial staticman support

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -38,6 +38,7 @@
         {{ partial "posts/series.html" . }}
         {{ partial "posts/disqus.html" . }}
         {{ partial "posts/commento.html" . }}
+        {{ partial "posts/staticman-comments.html" . }}
         {{ partial "posts/utteranc.html" . }}
       </footer>
     </article>
